--- a/java/benchmark/pom.xml
+++ b/java/benchmark/pom.xml
@@ -20,9 +20,10 @@
         </configuration>
       </plugin>
       <plugin>
-    <groupId>org.codehaus.mojo</groupId>
-    <artifactId>exec-maven-plugin</artifactId>
-    <executions>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions>
         <execution>
             <id>run-benchmarks</id>
             <phase>integration-test</phase>
