java source and target 1.8`

--- a/java/benchmark/pom.xml
+++ b/java/benchmark/pom.xml
@@ -17,6 +17,8 @@
 	                <version>1.28</version>
 	            </path>
         	</annotationProcessorPaths>
+		<source>1.8</source>
+		<target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
